--- a/HideAndSeek/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/HideAndSeek/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,7 +132,7 @@ MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -162,34 +162,31 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/BB_MyAI.BB_MyAI
-OpenAssetsAtExit=/Game/ThirdPersonBP/BP_MyAI.BP_MyAI
-OpenAssetsAtExit=/Game/ThirdPersonBP/BTTask_GetActorPosition.BTTask_GetActorPosition
-OpenAssetsAtExit=/Game/ThirdPersonBP/BP_AIController.BP_AIController
 OpenAssetsAtExit=/Game/ThirdPersonBP/BT_MyAI.BT_MyAI
-OpenAssetsAtExit=/Game/ThirdPersonBP/BTService_GetStartingPosition.BTService_GetStartingPosition
+OpenAssetsAtExit=/Game/ThirdPersonBP/BB_MyAI.BB_MyAI
+OpenAssetsAtExit=/Game/ThirdPersonBP/BTService_RandomHidingSpot.BTService_RandomHidingSpot
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/BT_MyAI
-MRUItem1=/Game/ThirdPersonBP/BTService_GetStartingPosition
-MRUItem2=/Game/ThirdPersonBP/BP_MyAI
-MRUItem3=/Game/ThirdPersonBP/BP_AIController
-MRUItem4=/Game/ThirdPersonBP/BTTask_GetActorPosition
-MRUItem5=/Game/ThirdPersonBP/BTTask_BlueprintBase_New
-MRUItem6=/Game/ThirdPersonBP/BB_MyAI
-MRUItem7=/Game/ThirdPersonBP/BTService_RandomHidingSpot
-MRUItem8=/Game/ThirdPersonBP/Orange
-MRUItem9=/Game/ThirdPersonBP/BP_MyGameMode
-MRUItem10=/Game/ThirdPersonBP/Green
-MRUItem11=/Game/ThirdPersonBP/BTTask_GetStartingPosition
-MRUItem12=/Game/ThirdPersonBP/BTService_GetActorPosition
-MRUItem13=/Game/ThirdPersonBP/BTService_BlueprintBase_New
-MRUItem14=/Game/ThirdPersonBP/Blue
-MRUItem15=/Game/ThirdPersonBP/Red
-MRUItem16=/Game/ThirdPersonBP/BP_It
-MRUItem17=/Game/ThirdPersonBP/BTService_GetActorLocation
-MRUItem18=/Game/ThirdPersonBP/BP_MyAI_It
-MRUItem19=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/ThirdPersonBP/BTService_RandomHidingSpot
+MRUItem1=/Game/ThirdPersonBP/BTService_GetActorPosition
+MRUItem2=/Game/ThirdPersonBP/BP_MyGameMode
+MRUItem3=/Game/ThirdPersonBP/BTTask_GetStartingPosition
+MRUItem4=/Game/ThirdPersonBP/BP_MyAI
+MRUItem5=/Game/ThirdPersonBP/BP_AIController
+MRUItem6=/Game/ThirdPersonBP/BTService_GetRandomPosition
+MRUItem7=/Game/ThirdPersonBP/BT_MyAI
+MRUItem8=/Game/ThirdPersonBP/BTTask_GetActorPosition
+MRUItem9=/Game/ThirdPersonBP/BTTask_BlueprintBase_New
+MRUItem10=/Game/ThirdPersonBP/BTService_BlueprintBase_New
+MRUItem11=/Game/ThirdPersonBP/BTService_GetStartingPosition
+MRUItem12=/Game/ThirdPersonBP/BB_MyAI
+MRUItem13=/Game/ThirdPersonBP/Orange
+MRUItem14=/Game/ThirdPersonBP/Green
+MRUItem15=/Game/ThirdPersonBP/Blue
+MRUItem16=/Game/ThirdPersonBP/Red
+MRUItem17=/Game/ThirdPersonBP/BP_It
+MRUItem18=/Game/ThirdPersonBP/BTService_GetActorLocation
+MRUItem19=/Game/ThirdPersonBP/BP_MyAI_It
 
 [DetailCategories]
 BP_MyAI_C.Character=True
@@ -925,11 +922,15 @@ BTTask_GetActorPosition_C.Default=True
 BTTask_GetActorPosition_C.Task=True
 BTTask_GetActorPosition_C.Description=True
 BP_AIController_C.Default=True
+BTTask_BlueprintBase_New_C.Default=True
+BTDecorator_CheckGameplayTagsOnActor.GameplayTagCheck=True
+BTDecorator_CheckGameplayTagsOnActor.Condition=True
+BTDecorator_CheckGameplayTagsOnActor.Description=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPersonBP/Green.Green;
 RecentlyPlaced=/Game/ThirdPersonBP/Orange.Orange;
 RecentlyPlaced=/Game/ThirdPersonBP/BP_MyAI.BP_MyAI;
-RecentlyPlaced=/Game/ThirdPersonBP/Green.Green;
 RecentlyPlaced=/Game/ThirdPersonBP/Blue.Blue;
 RecentlyPlaced=/Game/ThirdPersonBP/Red.Red;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
@@ -964,6 +965,8 @@ RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 /Game/ThirdPersonBP/BTService_GetActorPosition.BTService_GetActorPosition=1
 /Game/ThirdPersonBP/BP_MyGameMode.BP_MyGameMode=1
 /Game/ThirdPersonBP/BTService_RandomHidingSpot.BTService_RandomHidingSpot=1
+/Game/ThirdPersonBP/BTTask_BlueprintBase_New.BTTask_BlueprintBase_New=1
+/Game/ThirdPersonBP/BTTask_GetActorPosition.BTTask_GetActorPosition=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1022,22 +1025,26 @@ BP_It_C="\"Object.Actor.Tags\" "
 BP_MyAI_It_C="\"Object.Actor.Tags\" "
 ThirdPersonCharacter_C="\"Object.Actor.Tags\" "
 BTService_BlueprintBase_New_C=
-BTService_BlueprintBase=
-BTService=
-BTAuxiliaryNode=
-BTNode=
-BTService_RandomHidingSpot_C=
+BTService_BlueprintBase="\"Object.HidingPositions\" "
+BTService="\"Object.HidingPositions\" "
+BTAuxiliaryNode="\"Object.HidingPositions\" "
+BTNode="\"Object.HidingPositions\" "
+BTService_RandomHidingSpot_C="\"Object.HidingPositions\" "
 BTTask_GetStartingPosition_C=
 BTTask_BlueprintBase=
 BTTaskNode=
 BTService_GetStartingPosition_C=
-BP_MyGameMode_C=
-GameModeBase=
+BP_MyGameMode_C="\"Object.Threshold\" "
+GameModeBase="\"Object.Threshold\" "
 Info=
 BTTask_GetActorPosition_C=
+BTTask_BlueprintBase_New_C=
+BP_AIController_C="\"Object.null\" "
+AIController="\"Object.null\" "
+Controller="\"Object.null\" "
 
 [RootWindow]
-ScreenPosition=X=709.000 Y=660.000
+ScreenPosition=X=295.000 Y=67.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1955,7 +1962,7 @@ InstalledPlugins=XRVisualization
 ChangeVariableType_Warning=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=PIE
 
 [DetailCategoriesAdvanced]
 BTService_GetStartingPosition_C.Service=True
@@ -2033,7 +2040,7 @@ bMaterialQualityUsed[3]=0
 [DetailCustomWidgetExpansion]
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument0,
 BTService_BlueprintBase_New_C=
-K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument0,
+K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument0,K2Node_VariableGet.DefaultValueCategory.None,
 BTService_RandomHidingSpot_C=
 BP_MyAI_C=
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.None,
@@ -2046,6 +2053,8 @@ K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.InputArgument0,
 MulticastInlineDelegatePropertyWrapper=PropertyWrapper.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument0,
 ToolMenu=
 BTTask_GetActorPosition_C=
+BTTask_BlueprintBase_New_C=PropertyWrapper.DefaultValueCategory.None,K2Node_FunctionEntry.Inputs.InputArgument0,K2Node_VariableGet.DefaultValueCategory.None,
+BP_AIController_C=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
